Removes the BLE app from CubeMX Adds FreeRTOS and makes the BLE processing and user input into threads Adds full assert to CubeMX config, introduces debug assert handler, and adds a hacky script to workaround the fact that some generated code does not work with the asserts Increases stack size

--- a/ble_uart_display.ioc
+++ b/ble_uart_display.ioc
@@ -6,6 +6,9 @@ ADC1.OffsetNumber-0\#ChannelRegularConversion=ADC_OFFSET_NONE
 ADC1.Rank-0\#ChannelRegularConversion=1
 ADC1.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_2CYCLES_5
 ADC1.master=1
+FREERTOS.IPParameters=Tasks01,configCHECK_FOR_STACK_OVERFLOW
+FREERTOS.Tasks01=defaultTask,24,128,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL
+FREERTOS.configCHECK_FOR_STACK_OVERFLOW=2
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
 I2C1.IPParameters=Timing
@@ -15,24 +18,25 @@ Mcu.ContextProject=TrustZoneDisabled
 Mcu.Family=STM32L5
 Mcu.IP0=ADC1
 Mcu.IP1=DEBUG
-Mcu.IP10=SAI1
-Mcu.IP11=SPI1
-Mcu.IP12=SYS
-Mcu.IP13=TIM4
-Mcu.IP14=TIM16
-Mcu.IP15=TIM17
-Mcu.IP16=UCPD1
-Mcu.IP17=USART1
-Mcu.IP18=USB
+Mcu.IP10=RCC
+Mcu.IP11=SAI1
+Mcu.IP12=SPI1
+Mcu.IP13=SYS
+Mcu.IP14=TIM4
+Mcu.IP15=TIM16
+Mcu.IP16=TIM17
+Mcu.IP17=UCPD1
+Mcu.IP18=USART1
+Mcu.IP19=USB
 Mcu.IP2=DFSDM1
 Mcu.IP3=FMC
-Mcu.IP4=I2C1
-Mcu.IP5=LPUART1
-Mcu.IP6=NVIC
-Mcu.IP7=OCTOSPI1
-Mcu.IP8=PWR
-Mcu.IP9=RCC
-Mcu.IPNb=19
+Mcu.IP4=FREERTOS
+Mcu.IP5=I2C1
+Mcu.IP6=LPUART1
+Mcu.IP7=NVIC
+Mcu.IP8=OCTOSPI1
+Mcu.IP9=PWR
+Mcu.IPNb=20
 Mcu.Name=STM32L562QEIxQ
 Mcu.Package=UFBGA132
 Mcu.Pin0=PE5
@@ -118,15 +122,16 @@ Mcu.Pin80=PE13
 Mcu.Pin81=PD10
 Mcu.Pin82=VP_DFSDM1_VS_IN0
 Mcu.Pin83=VP_DFSDM1_VS_IN2
-Mcu.Pin84=VP_PWR_VS_DBSignals
-Mcu.Pin85=VP_SYS_VS_Systick
-Mcu.Pin86=VP_TIM4_VS_ControllerModeClock
-Mcu.Pin87=VP_TIM4_VS_ClockSourceITR
-Mcu.Pin88=VP_TIM16_VS_ClockSourceINT
-Mcu.Pin89=VP_TIM17_VS_ClockSourceINT
+Mcu.Pin84=VP_FREERTOS_VS_CMSIS_V2
+Mcu.Pin85=VP_PWR_VS_DBSignals
+Mcu.Pin86=VP_SYS_VS_tim1
+Mcu.Pin87=VP_TIM4_VS_ControllerModeClock
+Mcu.Pin88=VP_TIM4_VS_ClockSourceITR
+Mcu.Pin89=VP_TIM16_VS_ClockSourceINT
 Mcu.Pin9=PE4
-Mcu.Pin90=VP_STMicroelectronics.X-CUBE-BLE1_VS_WirelessJjBlueNRGAaMS_6.1.0
-Mcu.PinsNb=91
+Mcu.Pin90=VP_TIM17_VS_ClockSourceINT
+Mcu.Pin91=VP_STMicroelectronics.X-CUBE-BLE1_VS_WirelessJjBlueNRGAaMS_6.1.0
+Mcu.PinsNb=92
 Mcu.ThirdParty0=STMicroelectronics.X-CUBE-BLE1.6.1.0
 Mcu.ThirdPartyNb=1
 Mcu.TrustZone=disable
@@ -134,18 +139,24 @@ Mcu.UserConstants=
 Mcu.UserName=STM32L562QEIxQ
 MxCube.Version=6.1.0
 MxDb.Version=DB.6.0.10
-NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-NVIC.EXTI6_IRQn=true\:0\:0\:false\:false\:true\:true\:true
+NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.EXTI6_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
-NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.PendSV_IRQn=true\:7\:0\:false\:false\:false\:true\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_3
-NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true
-NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:false\:false\:false\:false
+NVIC.SavedPendsvIrqHandlerGenerated=true
+NVIC.SavedSvcallIrqHandlerGenerated=true
+NVIC.SavedSystickIrqHandlerGenerated=true
+NVIC.SysTick_IRQn=true\:7\:0\:false\:false\:false\:true\:false\:true
+NVIC.TIM1_UP_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
+NVIC.TimeBase=TIM1_UP_IRQn
+NVIC.TimeBaseIP=TIM1
+NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 PA10.GPIOParameters=GPIO_Label
 PA10.GPIO_Label=USART1_RX [ST-LINK_VCP_TX]
 PA10.Locked=true
@@ -375,9 +386,8 @@ PG5.GPIOParameters=GPIO_Label
 PG5.GPIO_Label=BLE_CS
 PG5.Locked=true
 PG5.Signal=GPIO_Output
-PG6.GPIOParameters=GPIO_Label,GPIO_ModeDefaultEXTI
+PG6.GPIOParameters=GPIO_Label
 PG6.GPIO_Label=BLE_INT
-PG6.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_RISING
 PG6.Locked=true
 PG6.Signal=GPXTI6
 PG7.Locked=true
@@ -403,7 +413,7 @@ ProjectManager.DeletePrevious=true
 ProjectManager.DeviceId=STM32L562QEIxQ
 ProjectManager.FirmwarePackage=STM32Cube FW_L5 V1.3.1
 ProjectManager.FreePins=false
-ProjectManager.HalAssertFull=false
+ProjectManager.HalAssertFull=true
 ProjectManager.HeapSize=0x200
 ProjectManager.KeepUserCode=true
 ProjectManager.LastFirmware=true
@@ -415,11 +425,11 @@ ProjectManager.ProjectBuild=false
 ProjectManager.ProjectFileName=ble_uart_display.ioc
 ProjectManager.ProjectName=ble_uart_display
 ProjectManager.RegisterCallBack=
-ProjectManager.StackSize=0x400
+ProjectManager.StackSize=0x1000
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_ADC1_Init-ADC1-false-HAL-true,4-MX_DFSDM1_Init-DFSDM1-false-HAL-true,5-MX_FMC_Init-FMC-false-HAL-true,6-MX_I2C1_Init-I2C1-false-HAL-true,7-MX_LPUART1_UART_Init-LPUART1-false-HAL-true,8-MX_OCTOSPI1_Init-OCTOSPI1-false-HAL-true,9-MX_SAI1_Init-SAI1-false-HAL-true,10-MX_TIM4_Init-TIM4-false-HAL-true,11-MX_TIM16_Init-TIM16-false-HAL-true,12-MX_TIM17_Init-TIM17-false-HAL-true,13-MX_UCPD1_Init-UCPD1-false-LL-true,14-MX_USB_PCD_Init-USB-false-HAL-true,15-MX_USART1_UART_Init-USART1-false-HAL-true,0-MX_PWR_Init-PWR-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_ADC1_Init-ADC1-false-HAL-true,4-MX_DFSDM1_Init-DFSDM1-false-HAL-true,5-MX_FMC_Init-FMC-false-HAL-true,6-MX_I2C1_Init-I2C1-false-HAL-true,7-MX_LPUART1_UART_Init-LPUART1-false-HAL-true,8-MX_USART1_UART_Init-USART1-false-HAL-true,9-MX_OCTOSPI1_Init-OCTOSPI1-false-HAL-true,10-MX_SAI1_Init-SAI1-false-HAL-true,11-MX_TIM4_Init-TIM4-false-HAL-true,12-MX_TIM16_Init-TIM16-false-HAL-true,13-MX_TIM17_Init-TIM17-false-HAL-true,14-MX_UCPD1_Init-UCPD1-false-LL-true,15-MX_USB_PCD_Init-USB-false-HAL-true,0-MX_PWR_Init-PWR-false-HAL-true
 RCC.ADCFreq_Value=96000000
 RCC.AHBFreq_Value=110000000
 RCC.APB1Freq_Value=110000000
@@ -572,14 +582,12 @@ SPI1.Direction=SPI_DIRECTION_2LINES
 SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler,DataSize
 SPI1.Mode=SPI_MODE_MASTER
 SPI1.VirtualType=VM_MASTER
-STMicroelectronics.X-CUBE-BLE1.6.1.0.BLE1IiApplicationsCcDeviceJjApplication=SampleApp
 STMicroelectronics.X-CUBE-BLE1.6.1.0.BSP.number=4
 STMicroelectronics.X-CUBE-BLE1.6.1.0.BlueNRGAaMSCcWirelessJjBlueNRGAaMSJjController=true
 STMicroelectronics.X-CUBE-BLE1.6.1.0.BlueNRGAaMSCcWirelessJjBlueNRGAaMSJjHCIIiTL=Basic
 STMicroelectronics.X-CUBE-BLE1.6.1.0.BlueNRGAaMSCcWirelessJjBlueNRGAaMSJjHCIIiTLIiINTERFACE=UserBoard
 STMicroelectronics.X-CUBE-BLE1.6.1.0.BlueNRGAaMSCcWirelessJjBlueNRGAaMSJjUtils=true
-STMicroelectronics.X-CUBE-BLE1.6.1.0.DeviceJjBLE1IiApplications_Checked=false
-STMicroelectronics.X-CUBE-BLE1.6.1.0.IPParameters=BlueNRGAaMSCcWirelessJjBlueNRGAaMSJjController,BlueNRGAaMSCcWirelessJjBlueNRGAaMSJjUtils,BlueNRGAaMSCcWirelessJjBlueNRGAaMSJjHCIIiTL,BlueNRGAaMSCcWirelessJjBlueNRGAaMSJjHCIIiTLIiINTERFACE,BLE1IiApplicationsCcDeviceJjApplication
+STMicroelectronics.X-CUBE-BLE1.6.1.0.IPParameters=BlueNRGAaMSCcWirelessJjBlueNRGAaMSJjController,BlueNRGAaMSCcWirelessJjBlueNRGAaMSJjUtils,BlueNRGAaMSCcWirelessJjBlueNRGAaMSJjHCIIiTL,BlueNRGAaMSCcWirelessJjBlueNRGAaMSJjHCIIiTLIiINTERFACE
 STMicroelectronics.X-CUBE-BLE1.6.1.0.WirelessJjBlueNRGAaMS_Checked=true
 STMicroelectronics.X-CUBE-BLE1.6.1.00.BSP.STBoard=false
 STMicroelectronics.X-CUBE-BLE1.6.1.00.BSP.api=HAL_EXTI_DRIVER
@@ -629,7 +637,7 @@ STMicroelectronics.X-CUBE-BLE1.6.1.03.BSP.mode=Output
 STMicroelectronics.X-CUBE-BLE1.6.1.03.BSP.name=CS Line
 STMicroelectronics.X-CUBE-BLE1.6.1.03.BSP.semaphore=
 STMicroelectronics.X-CUBE-BLE1.6.1.03.BSP.solution=PG5
-STMicroelectronics.X-CUBE-BLE1.6.1.0_SwParameter=BlueNRGAaMSCcWirelessJjBlueNRGAaMSJjUtils\:true;BlueNRGAaMSCcWirelessJjBlueNRGAaMSJjHCIIiTL\:Basic;BLE1IiApplicationsCcDeviceJjApplication\:SampleApp;BlueNRGAaMSCcWirelessJjBlueNRGAaMSJjController\:true;BlueNRGAaMSCcWirelessJjBlueNRGAaMSJjHCIIiTLIiINTERFACE\:UserBoard;
+STMicroelectronics.X-CUBE-BLE1.6.1.0_SwParameter=BlueNRGAaMSCcWirelessJjBlueNRGAaMSJjUtils\:true;BlueNRGAaMSCcWirelessJjBlueNRGAaMSJjHCIIiTL\:Basic;BlueNRGAaMSCcWirelessJjBlueNRGAaMSJjController\:true;BlueNRGAaMSCcWirelessJjBlueNRGAaMSJjHCIIiTLIiINTERFACE\:UserBoard;
 TIM17.Channel=TIM_CHANNEL_1
 TIM17.IPParameters=Channel
 USART1.IPParameters=VirtualMode-Asynchronous
@@ -638,12 +646,14 @@ VP_DFSDM1_VS_IN0.Mode=Parallel_Input_ch0
 VP_DFSDM1_VS_IN0.Signal=DFSDM1_VS_IN0
 VP_DFSDM1_VS_IN2.Mode=Parallel_Input_ch2
 VP_DFSDM1_VS_IN2.Signal=DFSDM1_VS_IN2
+VP_FREERTOS_VS_CMSIS_V2.Mode=CMSIS_V2
+VP_FREERTOS_VS_CMSIS_V2.Signal=FREERTOS_VS_CMSIS_V2
 VP_PWR_VS_DBSignals.Mode=DisableDeadBatterySignals
 VP_PWR_VS_DBSignals.Signal=PWR_VS_DBSignals
 VP_STMicroelectronics.X-CUBE-BLE1_VS_WirelessJjBlueNRGAaMS_6.1.0.Mode=WirelessJjBlueNRGAaMS
 VP_STMicroelectronics.X-CUBE-BLE1_VS_WirelessJjBlueNRGAaMS_6.1.0.Signal=STMicroelectronics.X-CUBE-BLE1_VS_WirelessJjBlueNRGAaMS_6.1.0
-VP_SYS_VS_Systick.Mode=SysTick
-VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+VP_SYS_VS_tim1.Mode=TIM1
+VP_SYS_VS_tim1.Signal=SYS_VS_tim1
 VP_TIM16_VS_ClockSourceINT.Mode=Enable_Timer
 VP_TIM16_VS_ClockSourceINT.Signal=TIM16_VS_ClockSourceINT
 VP_TIM17_VS_ClockSourceINT.Mode=Enable_Timer
